--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ a.appLink:hover {
 </head>
 <body>
 
-<h1>My HTML Apps</h1>
+<h1>MF便利ツール</h1>
 
 <a href="app1.html" class="appLink">ジャッジカウンター</a>
 <a href="app2.html" class="appLink">成功率算出君</a>
@@ -40,3 +40,4 @@ a.appLink:hover {
 
 </body>
 </html>
+
