--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>My HTML Apps</title>
+<title>MF便利ツール</title>
 <style>
 body {
   font-family: system-ui, -apple-system;
@@ -40,4 +40,5 @@ a.appLink:hover {
 
 </body>
 </html>
+
 
