--- a/app2.html
+++ b/app2.html
@@ -11,16 +11,12 @@ body {
   background: #1e1e2f;
   color: #fff;
   margin: 0;
-  padding: 6px;
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  box-sizing: border-box;
+  padding: 8px;
 }
 
 h1 {
   text-align: center;
-  margin: 4px 0;
+  margin-bottom: 8px;
   font-size: 18px;
 }
 
@@ -28,109 +24,116 @@ h1 {
 .mainButtons {
   display: flex;
   flex-direction: column;
-  gap: 4px;
+  gap: 8px;
 }
 
 button {
   font-weight: bold;
-  border-radius: 8px;
+  border-radius: 10px;
   border: none;
   color: #000;
 }
 
-.success { background: #ff9933; height: 45px; font-size:14px; width:100%; }
-.miss { background: #66ccff; height: 45px; font-size:14px; width:100%; }
-.reset { background: #ff6666; height: 45px; font-size:14px; flex-grow:1; }
-.soundToggle { background: #66dd88; height: 45px; font-size:14px; width:80px; }
-.csv { background: #cdaeff; height: 40px; font-size:14px; width:100%; margin-top:4px; border-radius:8px; }
+.success {
+  background: #ff9933;
+  height: 72px;        /* 押しやすく */
+  font-size:18px;
+}
+
+.miss {
+  background: #66ccff;
+  height: 72px;
+  font-size:18px;
+}
+
+.reset {
+  background: #ff6666;
+  height: 48px;
+  flex:1;
+}
+
+.soundToggle {
+  background: #66dd88;
+  width:90px;
+  height:48px;
+  font-size:14px;
+}
 
 button:active { opacity:0.7; }
-
-/* ===== 説明文 ===== */
-.helpText {
-  font-size: 12px;
-  line-height: 1.3;
-  opacity: 0.85;
-  margin: 4px 0 6px;
-}
 
 /* ===== 入力欄 ===== */
 .inputSection {
   border: 2px solid #fff;
-  border-radius: 8px;
-  padding: 4px;
-  margin-bottom: 6px;
+  border-radius: 10px;
+  padding: 8px;
+  margin: 8px 0;
 }
 
 .inputBox {
   width: 100%;
-  height: 30px;
-  font-size: 14px;
+  height: 38px;
+  font-size: 18px;
   text-align: right;
-  border-radius: 4px;
-  border:1px solid #fff;
+  border-radius: 6px;
+  border: 2px solid #fff;
   background: #1e1e2f;
   color: #fff;
-  margin-bottom: 4px;
+  margin-bottom: 6px;
+
+  /* ★ ズレ解消の決定打 */
+  box-sizing: border-box;
 }
 
 /* ===== テンキー ===== */
 .keypad {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 3px;
+  gap: 6px;
 }
 
 .keypad button {
-  height: 32px;
-  font-size: 14px;
+  height: 40px;
+  font-size: 16px;
   background: #bbbbbb;
-  border-radius: 4px;
+  border-radius: 6px;
 }
 
-/* ===== フッター（成功率結果） ===== */
+/* ===== 結果 ===== */
 .footer {
   background: #2b2b44;
-  padding: 6px;
-  border-radius: 6px;
-  margin-top: 2px;
+  padding: 10px;
+  border-radius: 8px;
   text-align: center;
-  flex-shrink: 0;
 }
 
-.value { font-size:14px; margin:2px 0; }
-.rate { font-size:20px; font-weight:bold; margin-top:2px; }
-.ci { font-size:12px; margin-top:2px; color:#ffeeaa; }
+.value { font-size:15px; }
+.rate { font-size:26px; font-weight:bold; }
+.ci { font-size:13px; color:#ffeeaa; }
 
-/* ===== リセット+音 ===== */
-.resetSoundWrapper {
-  display:flex;
-  gap:4px;
-  margin-top:2px;
-  flex-wrap: nowrap; 
-  align-items:center;
-}
-
-/* ===== メモ欄 ===== */
+/* ===== メモ ===== */
 .memoSection {
   border: 2px solid #fff;
-  border-radius: 8px;
-  padding: 4px;
-  margin-top: 4px;
-  flex-shrink: 0;
+  border-radius: 10px;
+  padding: 6px;
+  margin-top: 8px;
 }
 
 .memoSection textarea {
   width: 100%;
   height: 60px;
-  font-size:14px;
+  font-size: 15px;
   border: none;
   background: #1e1e2f;
   color: #fff;
-  resize: vertical;
-  padding: 4px;
-  border-radius: 4px;
+  resize: none;
   box-sizing: border-box;
+}
+
+/* ===== リセット＋音 ===== */
+.resetSoundWrapper {
+  display:flex;
+  gap:6px;
+  margin:8px 0;
 }
 </style>
 </head>
@@ -141,11 +144,6 @@ button:active { opacity:0.7; }
 <div class="mainButtons">
   <button class="success" onclick="addSuccess()">成功</button>
   <button class="miss" onclick="addMiss()">ミス</button>
-</div>
-
-<div class="helpText">
-  成功/ミスをクリックすると成功率を自動計算します。<br>
-  テンキー入力後に成功/ミスをクリックすると任意回数から再計算もできます。
 </div>
 
 <div class="inputSection">
@@ -166,10 +164,9 @@ button:active { opacity:0.7; }
   </div>
 </div>
 
-<!-- 成功率結果 -->
 <div class="footer">
-  <div class="value">成功回数：<span id="success">0</span></div>
-  <div class="value">ミス回数：<span id="miss">0</span></div>
+  <div class="value">成功：<span id="success">0</span></div>
+  <div class="value">ミス：<span id="miss">0</span></div>
   <div class="rate">成功率：<span id="rate">0.0</span>%</div>
   <div class="ci">95% 信頼区間：<span id="ci">0.0 - 0.0</span>%</div>
 </div>
@@ -179,68 +176,47 @@ button:active { opacity:0.7; }
   <button class="soundToggle" onclick="toggleSound()">🔊 音ON</button>
 </div>
 
-<div>
-  <button class="csv" onclick="exportCSV()">CSV出力</button>
-</div>
-
 <div class="memoSection">
-  <textarea id="memo" placeholder="メモ欄：自由に書き込み可能"></textarea>
+  <textarea id="memo" placeholder="メモ"></textarea>
 </div>
 
 <script>
-const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
-let soundOn = true;
-
-function playTone(freq,duration=0.1,volume=0.25){if(!soundOn)return; const osc=audioCtx.createOscillator(); const gain=audioCtx.createGain(); osc.frequency.value=freq; gain.gain.value=volume; osc.connect(gain); gain.connect(audioCtx.destination); osc.start(); osc.stop(audioCtx.currentTime+duration);}
-function playSuccessSound(){playTone(880,0.12,0.3);}
-function playMinusSound(){playTone(440,0.12,0.25);}
-function toggleSound(){soundOn=!soundOn; document.querySelector(".soundToggle").textContent = soundOn?"🔊 音ON":"🔇 音OFF";}
+const audioCtx=new (window.AudioContext||window.webkitAudioContext)();
+let soundOn=true;
+function playTone(f,d=0.1,v=0.25){
+  if(!soundOn)return;
+  const o=audioCtx.createOscillator();
+  const g=audioCtx.createGain();
+  o.frequency.value=f; g.gain.value=v;
+  o.connect(g); g.connect(audioCtx.destination);
+  o.start(); o.stop(audioCtx.currentTime+d);
+}
+function playOK(){playTone(880,0.12,0.3);}
+function playNG(){playTone(440,0.12,0.25);}
+function toggleSound(){
+  soundOn=!soundOn;
+  document.querySelector(".soundToggle").textContent=soundOn?"🔊 音ON":"🔇 音OFF";
+}
 
 let success=0, miss=0;
-
 function getInputValue(){return Number(document.getElementById("inputValue").value)||1;}
 
-function updateRate(){
-  const total=success+miss;
-  const rate = total===0?0:(success/total*100).toFixed(1);
-  document.getElementById("rate").textContent = rate;
-  updateCI();
+function update(){
+  const t=success+miss;
+  document.getElementById("rate").textContent=t?(success/t*100).toFixed(1):"0.0";
+  if(!t){document.getElementById("ci").textContent="0.0 - 0.0";return;}
+  const p=success/t,se=Math.sqrt(p*(1-p)/t);
+  document.getElementById("ci").textContent=
+    `${Math.max(0,(p-1.96*se)*100).toFixed(1)} - ${Math.min(100,(p+1.96*se)*100).toFixed(1)}`;
 }
 
-function updateCI(){
-  const total = success+miss;
-  if(total===0){ document.getElementById("ci").textContent="0.0 - 0.0"; return; }
-  const p = success/total;
-  const SE = Math.sqrt(p*(1-p)/total);
-  const lower = Math.max(0,(p - 1.96*SE)*100).toFixed(1);
-  const upper = Math.min(100,(p + 1.96*SE)*100).toFixed(1);
-  document.getElementById("ci").textContent = `${lower} - ${upper}`;
-}
+function addSuccess(){playOK();success+=getInputValue();document.getElementById("success").textContent=success;update();clearNum();}
+function addMiss(){playNG();miss+=getInputValue();document.getElementById("miss").textContent=miss;update();clearNum();}
+function resetAll(){playNG();success=miss=0;document.getElementById("success").textContent=0;document.getElementById("miss").textContent=0;update();clearNum();document.getElementById("memo").value="";}
 
-function addSuccess(){ playSuccessSound(); success+=getInputValue(); document.getElementById("success").textContent=success; updateRate(); clearNum();}
-function addMiss(){ playMinusSound(); miss+=getInputValue(); document.getElementById("miss").textContent=miss; updateRate(); clearNum();}
-function resetAll(){ playMinusSound(); success=0; miss=0; document.getElementById("success").textContent=0; document.getElementById("miss").textContent=0; updateRate(); clearNum(); document.getElementById("memo").value="";}
-
-function addNum(n){ document.getElementById("inputValue").value+=n; }
-function clearNum(){ document.getElementById("inputValue").value=""; }
-function backspace(){ const v=document.getElementById("inputValue").value; document.getElementById("inputValue").value=v.slice(0,-1); }
-
-function exportCSV(){
-  const total=success+miss;
-  const rate = total===0?0:(success/total*100).toFixed(1);
-  const SE = Math.sqrt((success/total)*(1-(success/total))/total||0);
-  const lower = Math.max(0,(success/total - 1.96*SE)*100).toFixed(1);
-  const upper = Math.min(100,(success/total + 1.96*SE)*100).toFixed(1);
-  let csv="成功回数,ミス回数,成功率,95%信頼区間\n";
-  csv+=`${success},${miss},${rate},"${lower} - ${upper}"\n\n`;
-  csv+=`メモ,"${document.getElementById("memo").value.replace(/"/g,'""')}"\n`;
-  csv+=`出力日時,${new Date().toLocaleString()}\n`;
-  const blob = new Blob([csv], {type:'text/csv'});
-  const a = document.createElement('a');
-  a.href = URL.createObjectURL(blob);
-  a.download = '成功率算出結果.csv';
-  a.click();
-}
+function addNum(n){inputValue.value+=n;}
+function clearNum(){inputValue.value="";}
+function backspace(){inputValue.value=inputValue.value.slice(0,-1);}
 </script>
 </body>
 </html>
