--- a/app2.html
+++ b/app2.html
@@ -208,7 +208,7 @@ button{
 
 <!-- 任意入力 -->
 <div class="optionalSection">
-  <p style="font-size:13px;">データ提供にご協力いただける場合は、以下を入力し、①csvファイルをダウンロード→②データ提供先のGoogleドライブへアップロードをお願いします。</p>
+  <p style="font-size:13px;">データ提供にご協力いただける場合は以下を入力し、①csvファイルをダウンロード→②データ提供先のGoogleドライブへアップロードをお願いします。</p>
   <div class="formSection">
     <input id="playerName" placeholder="プレイヤー名 (任意)">
     <input id="userLevel" placeholder="術者レベル">
@@ -306,3 +306,4 @@ function downloadCSV(){
 </script>
 </body>
 </html>
+
