--- a/app2.html
+++ b/app2.html
@@ -5,6 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>成功率算出君</title>
 <style>
+*{
+  box-sizing:border-box;
+}
+
 body{
   font-family: system-ui, -apple-system;
   background:#1e1e2f;
@@ -19,7 +23,6 @@ h1{
   margin-bottom:4px;
 }
 
-/* 説明文 */
 .description{
   text-align:center;
   font-size:13px;
@@ -53,27 +56,9 @@ button{
 .reset{background:#ff6666;height:48px;flex:1;}
 .soundToggle{background:#66dd88;height:48px;width:90px;font-size:14px;}
 
-/* ===== CSV & データ提供 ===== */
-.csvSection{
-  display:flex;
-  align-items:center;
-  gap:6px;
-  margin-top:6px;
-}
-
-.csvBtn{
-  height:46px;
-  font-size:14px;
-  border-radius:10px;
-  border:none;
-  background:#b399ff;
-  color:#000;
-  padding:0 8px;
-  cursor:pointer;
-}
-
-/* ===== 入力欄 ===== */
+/* ===== テンキー入力 ===== */
 .inputSection{
+  width:100%;
   border:2px solid #fff;
   border-radius:10px;
   padding:8px;
@@ -90,10 +75,8 @@ button{
   background:#1e1e2f;
   color:#fff;
   margin-bottom:6px;
-  box-sizing:border-box;
 }
 
-/* ===== テンキー ===== */
 .keypad{
   display:grid;
   grid-template-columns:repeat(3,1fr);
@@ -128,13 +111,13 @@ button{
 
 /* ===== 任意入力 ===== */
 .optionalSection{
+  width:100%;
   background:#264653;
   border-radius:10px;
   padding:8px;
   margin-top:6px;
 }
 
-.formSection{margin:0;padding:6px;}
 .formSection input{
   width:100%;
   height:38px;
@@ -145,11 +128,6 @@ button{
   background:#1e1e2f;
   color:#fff;
   padding:4px;
-  box-sizing:border-box;
-}
-
-.memoSection{
-  margin-top:6px;
 }
 
 .memoSection textarea{
@@ -160,11 +138,30 @@ button{
   background:#1e1e2f;
   color:#fff;
   resize:none;
-  box-sizing:border-box;
+}
+
+/* ===== CSV ===== */
+.csvSection{
+  display:flex;
+  align-items:center;
+  gap:6px;
+  margin-top:6px;
+}
+
+.csvBtn{
+  height:46px;
+  font-size:14px;
+  border-radius:10px;
+  border:none;
+  background:#b399ff;
+  color:#000;
+  padding:0 8px;
+  cursor:pointer;
 }
 </style>
 </head>
 <body>
+
 <h1>成功率算出君</h1>
 <div class="description">
 成功/ミスをクリックすると成功率を自動計算します。
@@ -206,9 +203,12 @@ button{
   <button class="soundToggle" onclick="toggleSound()">🔊 音ON</button>
 </div>
 
-<!-- 任意入力 -->
 <div class="optionalSection">
-  <p style="font-size:13px;">データ提供にご協力いただける場合は以下を入力し、①csvファイルをダウンロード→②データ提供先のGoogleドライブへアップロードをお願いします。</p>
+  <p style="font-size:13px;">
+    データ提供にご協力いただける場合は、以下を入力し、
+    ① CSVをダウンロード → ② データ提供先のGoogleドライブへアップロードをお願いします。
+  </p>
+
   <div class="formSection">
     <input id="playerName" placeholder="プレイヤー名 (任意)">
     <input id="userLevel" placeholder="術者レベル">
@@ -216,13 +216,12 @@ button{
     <input id="skillName" placeholder="技名(正式名称)">
   </div>
 
-  <!-- CSV & データ提供ボタン -->
   <div class="csvSection">
     <button class="csvBtn" onclick="downloadCSV()">① CSVダウンロード</button>
-    <span style="align-self:center;font-size:16px;">→</span>
+    <span style="font-size:16px;">→</span>
     <button class="csvBtn" style="background:#aa88ff;"
-            onclick="window.open('https://drive.google.com/drive/folders/1tYpywXZoB33LoSDLk98yfL351-uwfmdf','_blank')">
-      ② データ提供はコチラ（Googleドライブ）
+      onclick="window.open('https://drive.google.com/drive/folders/1tYpywXZoB33LoSDLk98yfL351-uwfmdf','_blank')">
+      ② データ提供はコチラ（Googleドライブが開きます）
     </button>
   </div>
 
@@ -232,25 +231,31 @@ button{
 </div>
 
 <script>
-/* ===== 音 ===== */
 const audioCtx=new (window.AudioContext||window.webkitAudioContext)();
 let soundOn=true;
-function playTone(f,d=0.1,v=0.25){if(!soundOn)return; const o=audioCtx.createOscillator(); const g=audioCtx.createGain(); o.frequency.value=f; g.gain.value=v; o.connect(g); g.connect(audioCtx.destination); o.start(); o.stop(audioCtx.currentTime+d);}
-function ok(){playTone(880,0.12,0.3);}
-function ng(){playTone(440,0.12,0.25);}
-function toggleSound(){soundOn=!soundOn; document.querySelector(".soundToggle").textContent=soundOn?"🔊 音ON":"🔇 音OFF";}
+function playTone(f,d=0.1,v=0.25){
+  if(!soundOn)return;
+  const o=audioCtx.createOscillator();
+  const g=audioCtx.createGain();
+  o.frequency.value=f; g.gain.value=v;
+  o.connect(g); g.connect(audioCtx.destination);
+  o.start(); o.stop(audioCtx.currentTime+d);
+}
+function ok(){playTone(880);}
+function ng(){playTone(440);}
+function toggleSound(){
+  soundOn=!soundOn;
+  document.querySelector(".soundToggle").textContent=soundOn?"🔊 音ON":"🔇 音OFF";
+}
 
-/* ===== カウンター ===== */
 let success=0, miss=0;
 const inputValue=document.getElementById("inputValue");
 const successEl=document.getElementById("success");
 const missEl=document.getElementById("miss");
 const rate=document.getElementById("rate");
 const ci=document.getElementById("ci");
-const memo=document.getElementById("memo");
 
 function getVal(){return Number(inputValue.value)||1;}
-
 function update(){
   const t=success+miss;
   rate.textContent=t?(success/t*100).toFixed(1):"0.0";
@@ -258,7 +263,6 @@ function update(){
   const p=success/t,se=Math.sqrt(p*(1-p)/t);
   ci.textContent=`${Math.max(0,(p-1.96*se)*100).toFixed(1)} - ${Math.min(100,(p+1.96*se)*100).toFixed(1)}`;
 }
-
 function addSuccess(){ok(); success+=getVal(); successEl.textContent=success; update(); clearNum();}
 function addMiss(){ng(); miss+=getVal(); missEl.textContent=miss; update(); clearNum();}
 function resetAll(){
@@ -268,42 +272,36 @@ function resetAll(){
   missEl.textContent=0;
   update();
   clearNum();
-  memo.value="";
-  document.getElementById("playerName").value="";
-  document.getElementById("userLevel").value="";
-  document.getElementById("targetLevel").value="";
-  document.getElementById("skillName").value="";
+  ["playerName","userLevel","targetLevel","skillName","memo"].forEach(id=>document.getElementById(id).value="");
 }
-
-/* ===== テンキー ===== */
 function addNum(n){inputValue.value+=n;}
 function clearNum(){inputValue.value="";}
 function backspace(){inputValue.value=inputValue.value.slice(0,-1);}
 
-/* ===== CSVダウンロード ===== */
+/* CSV（成功率算出君Ⅱ形式互換） */
 function downloadCSV(){
-  const playerName=document.getElementById("playerName").value;
-  const userLevel=parseInt(document.getElementById("userLevel").value)||0;
-  const targetLevel=parseInt(document.getElementById("targetLevel").value)||0;
-  const skillName=document.getElementById("skillName").value;
-  const levelDiff=userLevel-targetLevel;
-  const total=success+miss;
-  const successRate=total>0?((success/total*100).toFixed(2))+"%":"0%";
+  const name=document.getElementById("playerName").value;
+  const userLv=parseInt(document.getElementById("userLevel").value)||0;
+  const targetLv=parseInt(document.getElementById("targetLevel").value)||0;
+  const skill=document.getElementById("skillName").value;
+  const memo=document.getElementById("memo").value;
+  const t=success+miss;
+  const rate=t?((success/t*100).toFixed(2))+"%":"0%";
   const now=new Date().toLocaleString();
 
-  const csvData=[
-    ["プレイヤー名","術者レベル","対象レベル","レベル差","成功","ミス","成功率","技名(正式名称)","メモ","出力日時"],
-    [playerName,userLevel,targetLevel,levelDiff,success,miss,successRate,skillName,memo.value,now]
+  const rows=[
+    ["プレイヤー名","術者Lv","対象Lv","レベル差","成功","ミス","成功率","技名","メモ","区分","出力日時"],
+    [name,userLv,targetLv,userLv-targetLv,success,miss,rate,skill,memo,"単体",now]
   ];
 
-  const csvContent=csvData.map(e=>e.join(",")).join("\n");
-  const blob=new Blob([csvContent],{type:"text/csv"});
+  const csv=rows.map(r=>r.join(",")).join("\n");
+  const blob=new Blob([csv],{type:"text/csv"});
   const a=document.createElement("a");
   a.href=URL.createObjectURL(blob);
-  a.download="成功率算出結果.csv";
+  a.download="成功率算出結果_単体.csv";
   a.click();
 }
 </script>
+
 </body>
 </html>
-
